--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,76 @@
-blinker==1.6.2
+certifi==2023.7.22
 cinemagoer==2023.5.1
-click==8.1.7
+pytz==2023.3.post1
+tzdata==2023.3
 detect==2020.12.3
-exceptiongroup==1.1.3
-Flask==3.0.0
-Flask-Login==0.6.0
+setuptools==65.5.1
+cryptography==41.0.4
+packaging==23.2
+pip==22.3.1
+click==8.1.7
+pytest==7.4.2
 importlib-metadata==6.8.0
-iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-langdetect==1.0.9
-lxml==4.9.3
-MarkupSafe==2.1.3
+bleach==6.1.0
+importlib-resources==6.1.0
+Flask-Security-Too==5.3.2
 mock==5.1.0
-mysql==0.0.3
+lxml==4.9.3
+typing-extensions==4.7.1
+bcrypt==4.0.1
+zipp==3.16.2
+idna==3.4
+charset-normalizer==3.3.0
+Jinja2==3.1.2
+flask-sqlalchemy==3.1.1
+WTForms==3.0.1
+greenlet==3.0.1
+flask==3.0.0
+Flask-Security==3.0.0
+werkzeug==3.0.0
+requests==2.31.0
+pycparser==2.21
+Babel==2.13.0
+tmdbsimple==2.9.1
+python-dateutil==2.8.2
+dnspython==2.4.2
 mysql-connector-python-rf==2.2.2
 mysqlclient==2.2.0
-numpy==1.26.0
-packaging==23.2
+MarkupSafe==2.1.3
+itsdangerous==2.1.2
 pandas==2.1.1
-pluggy==1.3.0
-pool==0.1.2.dev0
-PyMySQL==1.1.0
-PyMysqlPool==1.0.9
-pytest==7.4.2
-python-dateutil==2.8.2
-pytz==2023.3.post1
-six==1.16.0
+email-validator==2.1.0.post1
 SQLAlchemy==2.0.21
+urllib3==2.0.7
 tomli==2.0.1
-typing_extensions==4.7.1
-tzdata==2023.3
-Werkzeug==3.0.0
-zipp==3.16.2
+iniconfig==2.0.0
+scripts==2.0
+numpy==1.26.0
+six==1.16.0
+cffi==1.16.0
+passlib==1.7.4
+blinker==1.6.2
+pyScss==1.4.0
+mkdocs-material-extensions==1.3
+speaklater==1.3
+pluggy==1.3.0
+antiorm==1.2.1
+flask-wtf==1.2.1
+exceptiongroup==1.1.3
+PyMySQL==1.1.0
+langdetect==1.0.9
+PyMysqlPool==1.0.9
+wheel==0.38.4
+Flask-BabelEx==0.9.4
+Flask-Mail==0.9.1
+Flask-Testing==0.8.1
+Flask-Login==0.6.0
+webencodings==0.5.1
+Flask-Principal==0.4.0
+extensions==0.4
+flask-mailman==0.3.0
+stua==0.2
+pool==0.1.2.dev0
+db==0.1.1
+testcase==0.1.0
+mysql==0.0.3
+tmdb==0.0.0
