--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,73 @@
-antiorm==1.2.1
-Babel==2.13.0
-bcrypt==4.0.1
-bleach==6.1.0
-blinker==1.6.2
-certifi==2023.7.22
-cffi==1.16.0
-charset-normalizer==3.3.0
-cinemagoer==2023.5.1
-click==8.1.7
-cryptography==41.0.4
-db==0.1.1
-detect==2020.12.3
-dnspython==2.4.2
-email-validator==2.1.0.post1
-exceptiongroup==1.1.3
-extensions==0.4
-Flask==2.3.0
-Flask-BabelEx==0.9.4
-Flask-Login==0.6.0
-Flask-Mail==0.9.1
-flask-mailman==0.3.0
-Flask-Principal==0.4.0
-Flask-Security==3.0.0
-Flask-Security-Too==5.3.2
-Flask-SQLAlchemy==3.1.1
-Flask-Testing==0.8.1
-Flask-WTF==1.2.1
-greenlet==3.0.1
-idna==3.4
-importlib-metadata==6.8.0
-importlib-resources==6.1.0
-iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-langdetect==1.0.9
-lxml==4.9.3
-MarkupSafe==2.1.3
-mkdocs-material-extensions==1.3
-mock==5.1.0
-mysql==0.0.3
-mysql-connector-python-rf==2.2.2
-mysqlclient==2.2.0
-numpy==1.26.0
-packaging==23.2
-pandas==2.1.1
-passlib==1.7.4
-pluggy==1.3.0
-pool==0.1.2.dev0
-pycparser==2.21
-PyMySQL==1.1.0
-PyMysqlPool==1.0.9
-pyScss==1.4.0
-pytest==7.4.2
-python-dateutil==2.8.2
-pytz==2023.3.post1
-requests==2.31.0
-scripts==2.0
-six==1.16.0
-speaklater==1.3
-SQLAlchemy==2.0.21
-stua==0.2
-testcase==0.1.0
-tmdb==0.0.0
-tmdbsimple==2.9.1
-tomli==2.0.1
-typing_extensions==4.7.1
-tzdata==2023.3
-urllib3==2.0.7
-webencodings==0.5.1
+antiorm
+Babel
+bcrypt
+bleach
+blinker
+certifi
+cffi
+charset-normalizer
+cinemagoer
+click
+cryptography
+db
+detect
+dnspython
+email-validator
+exceptiongroup
+extensions
+Flask
+Flask-BabelEx
+Flask-Login
+Flask-Mail
+flask-mailman
+Flask-Principal
+Flask-Security
+Flask-Security-Too
+Flask-SQLAlchemy
+Flask-Testing
+Flask-WTF
+greenlet
+idna
+importlib-metadata
+importlib-resources
+iniconfig
+itsdangerous
+Jinja2
+langdetect
+lxml
+MarkupSafe
+mkdocs-material-extensions
+mock
+mysql
+mysql-connector-python-rf
+mysqlclient
+numpy
+packaging
+pandas
+passlib
+pluggy
+pool
+pycparser
+PyMySQL
+PyMysqlPool
+pyScss
+pytest
+python-dateutil
+pytz
+requests
+scripts
+six
+speaklater
+SQLAlchemy
+stua
+testcase
+tmdb
+tmdbsimple
+tomli
+typing_extensions
+tzdata
+urllib3
+webencodings
 Werkzeug==2.3.6
-WTForms==3.0.1
-zipp==3.16.2
+WTForms
+zipp
