updated requirements again to ensure none are missing

--- a/requirements.txt
+++ b/requirements.txt
@@ -79,3 +79,18 @@ Hypercorn
 aiofiles
 aiomysql
 taskgroup
+anyio
+coverage
+h11
+h2
+hpack
+hyperframe
+mysql-connector-python
+pip
+priority
+protobuf
+python-dotenv
+setuptools
+sniffio
+wheel
+wsproto
