--- a/.env.development
+++ b/.env.development
@@ -7,14 +7,14 @@ SESSION_TYPE=redis
 UPSTASH_REDIS_URL=redis://localhost:6379
 
 # MySQL Database Configuration for Movies
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_USER=root
 DB_PASSWORD=caching_sha2_password
 DB_NAME=imdb
 DB_PORT=3306
 
 # MySQL Database Configuration for User Accounts
-USER_DB_HOST=localhost
+USER_DB_HOST=127.0.0.1
 USER_DB_USER=root
 USER_DB_PASSWORD=caching_sha2_password
 USER_DB_NAME=UserAccounts
