--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,9 @@
-aiofiles==23.2.1
 aiomysql==0.2.0
-aioredis==2.0.1
-antiorm==1.2.1
-anyio==4.0.0
-async-timeout==4.0.3
-Babel==2.13.0
-bcrypt==4.0.1
-bleach==6.1.0
-blinker==1.6.2
-certifi==2023.7.22
-cffi==1.16.0
-charset-normalizer==3.3.0
-cinemagoer==2023.5.1
-click==8.1.7
-coverage==7.3.2
-cryptography==41.0.4
-db==0.1.1
-detect==2020.12.3
-dnspython==2.4.2
-email-validator==2.1.0.post1
-exceptiongroup==1.1.3
-extensions==0.4
-Flask==3.0.0
-Flask-BabelEx==0.9.4
-Flask-Mail==0.9.1
-flask-mailman==0.3.0
-Flask-Principal==0.4.0
-Flask-SQLAlchemy==3.1.1
-Flask-Testing==0.8.1
-Flask-WTF==1.2.1
-greenlet==3.0.1
-gunicorn==21.2.0
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==1.0.1
 httpx==0.25.1
-Hypercorn==0.15.0
-hyperframe==6.0.1
-idna==3.4
-importlib-metadata==6.8.0
-importlib-resources==6.1.0
-iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-langdetect==1.0.9
-lxml==4.9.3
-MarkupSafe==2.1.3
-mkdocs-material-extensions==1.3
-mock==5.1.0
-mysql==0.0.3
-mysql-connector-python==8.2.0
-mysql-connector-python-rf==2.2.2
-mysqlclient==2.2.0
-numpy==1.26.0
-packaging==23.2
-pandas==2.1.1
-passlib==1.7.4
-pluggy==1.3.0
-pool==0.1.2.dev0
-priority==2.0.0
-protobuf==4.21.12
-pycparser==2.21
-PyMySQL==1.1.0
-PyMysqlPool==1.0.9
-pyScss==1.4.0
-pytest==7.4.2
-python-dateutil==2.8.2
 python-dotenv==1.0.0
-pytz==2023.3.post1
-Quart==0.19.3
-Quart-Session==3.0.0
+quart==0.19.3
+quart-session==3.0.0
 redis==5.0.1
-redis-cli==1.0.1
-requests==2.31.0
-scripts==2.0
-six==1.16.0
-sniffio==1.3.0
-speaklater==1.3
-SQLAlchemy==2.0.21
-stua==0.2
-taskgroup==0.0.0a4
-testcase==0.1.0
-tmdb==0.0.0
+hypercorn==0.15.0
 tmdbsimple==2.9.1
-tomli==2.0.1
-typing_extensions==4.7.1
-tzdata==2023.3
-urllib3==2.0.7
-uvicorn==0.25.0
-webencodings==0.5.1
-Werkzeug==3.0.1
-wsproto==1.2.0
-WTForms==3.0.1
-zipp==3.16.2
+pytest==7.4.2
