1. .env.example - Created with template values (no secrets)   2. .gitignore - Updated to exclude environment files while keeping .env.example   3. scripts/tmdb_client.py - Updated to use secrets_manager.get_secret("TMDB_API_KEY")   4. settings.py - Updated to use secure secrets management for both Flask and TMDB keys   5. secrets_manager.py - Exists and provides centralized secrets management   6. Git tracking - Removed .env.development from git tracking   7. API key loading - Tested and working correctly

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,19 @@ htmlcov
 ## Vim files
 .*.swp
 .idea
+
+# Environment files with secrets
 .env
+.env.local
+.env.production
+.env.*.local
+
+# Keep example files
+!.env.example
+
+# Secrets and keys
+*.key
+*.pem
+*.crt
+*.cer
+secrets/
