db pool handling

--- a/.env.development
+++ b/.env.development
@@ -13,6 +13,17 @@ DB_PASSWORD=<SET_IN_ENVIRONMENT>
 DB_NAME=imdb
 DB_PORT=3306
 
+# Database Pool Configuration (Development Optimized)
+POOL_MIN_SIZE=3
+POOL_MAX_SIZE=10
+DB_CONNECT_TIMEOUT=10
+DB_POOL_RECYCLE=3600
+DB_POOL_PRE_PING=true
+DB_PING_INTERVAL=30
+DB_MAX_RETRIES=3
+DB_CIRCUIT_BREAKER_THRESHOLD=5
+DB_CIRCUIT_BREAKER_TIMEOUT=60
+
 # MySQL Database Configuration for User Accounts
 USER_DB_HOST=127.0.0.1
 USER_DB_USER=root
