--- a/.env.example
+++ b/.env.example
@@ -46,5 +46,16 @@ STACKHERO_DB_PORT=3306
 # SSL Certificate (Optional)
 SSL_CERT_PATH=
 
+# Database Pool Configuration (Advanced)
+POOL_MIN_SIZE=5
+POOL_MAX_SIZE=20
+DB_CONNECT_TIMEOUT=10
+DB_POOL_RECYCLE=3600
+DB_POOL_PRE_PING=true
+DB_PING_INTERVAL=30
+DB_MAX_RETRIES=3
+DB_CIRCUIT_BREAKER_THRESHOLD=5
+DB_CIRCUIT_BREAKER_TIMEOUT=60
+
 # Project Root
 PROJECT_ROOT=/path/to/your/project
