--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,17 @@ DB_CIRCUIT_BREAKER_TIMEOUT=60
 
 # Project Root
 PROJECT_ROOT=/path/to/your/project
+
+# Grafana Cloud Configuration (Step 9: Complete Observability)
+# Get these from grafana.com → My Account → Cloud Portal
+GRAFANA_LOKI_URL=https://logs-prod-xxx.grafana.net
+GRAFANA_LOKI_USER=your-loki-user-id
+GRAFANA_LOKI_KEY=your-loki-api-key
+
+# Prometheus/Grafana Cloud Metrics (if using remote write)
+GRAFANA_PROMETHEUS_URL=https://prometheus-prod-xxx.grafana.net
+GRAFANA_PROMETHEUS_USER=your-prometheus-user-id  
+GRAFANA_PROMETHEUS_KEY=your-prometheus-api-key
+
+# Application Version (for metrics)
+APP_VERSION=1.0.0
