grafana up and running

--- a/.env.development
+++ b/.env.development
@@ -40,5 +40,17 @@ SSL_CERT_PATH=
 # Project Root
 PROJECT_ROOT=/Users/bryceharmon/Desktop/nextreel-lite
 
+# Grafana Cloud Configuration - SET IN ENVIRONMENT
+# GRAFANA_API_TOKEN=<SET_IN_ENVIRONMENT>
+# GRAFANA_URL=https://your-instance.grafana.net
+
+# Loki Configuration (for log shipping) - SET IN ENVIRONMENT  
+# GRAFANA_LOKI_URL=https://logs-prod-xyz.grafana.net
+# GRAFANA_LOKI_USER=<SET_IN_ENVIRONMENT>
+# GRAFANA_LOKI_KEY=<SET_IN_ENVIRONMENT>
+
+# Application Version
+APP_VERSION=1.0.0
+
 # DO NOT COMMIT ACTUAL SECRETS TO THIS FILE!
 # Set actual values in your environment or create a .env file for local development
