--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,75 @@
-aiomysql==0.2.0
-httpx==0.25.1
-python-dotenv==1.0.0
-quart==0.19.3
-quart-session==3.0.0
-redis==5.0.1
-hypercorn==0.15.0
-tmdbsimple==2.9.1
-pytest==7.4.2
-cryptography==41.0.4
-psutil==7.0.0
-schedule==1.2.2
+# NextReel Requirements File
+# ===========================
+# Core Web Framework & Server
+# ---------------------------
+quart==0.19.6                    # Async web framework (Flask-like API)
+hypercorn==0.16.0                # ASGI server for running Quart apps
+quart-session==3.0.0             # Session management for Quart
+werkzeug==3.0.1                  # WSGI utilities (used by Quart)
+
+# Database & Storage
+# -----------------
+aiomysql==0.2.0                  # Async MySQL/MariaDB client
+redis==5.0.1                     # Redis client for caching and sessions
+PyMySQL==1.1.0                   # Pure Python MySQL client (fallback)
+
+# API Clients & HTTP
+# -----------------
+httpx==0.25.2                    # Modern async HTTP client
+tmdbsimple==2.9.1                # TMDB (The Movie Database) API wrapper
+requests==2.31.0                 # HTTP library (for tmdbsimple)
+
+# Security & Authentication
+# ------------------------
+cryptography==41.0.7             # Cryptographic primitives for security features
+PyJWT==2.8.0                     # JSON Web Token implementation
+
+# Configuration & Environment
+# --------------------------
+python-dotenv==1.0.0             # Load environment variables from .env file
+
+# Monitoring & Observability
+# -------------------------
+prometheus-client==0.19.0        # Prometheus metrics collection
+psutil==5.9.7                    # System and process utilities
+
+# Logging & Debugging (Optional but Recommended)
+# ----------------------------------------------
+python-logging-loki==0.3.1       # Grafana Loki log aggregation (optional)
+colorlog==6.8.0                  # Colored terminal output for logs
+
+# Task Scheduling & Background Jobs
+# ---------------------------------
+schedule==1.2.0                  # Job scheduling library
+APScheduler==3.10.4              # Advanced Python Scheduler
+
+# Testing & Development
+# --------------------
+pytest==7.4.4                    # Testing framework
+pytest-asyncio==0.21.1          # Async test support for pytest
+pytest-cov==4.1.0                # Coverage reporting for pytest
+pytest-mock==3.12.0              # Mock object library for pytest
+
+# Code Quality & Linting
+# ---------------------
+flake8==6.1.0                    # Style guide enforcement
+black==23.12.1                   # Code formatter
+mypy==1.8.0                      # Static type checker
+pylint==3.0.3                    # Code analysis tool
+
+# Documentation
+# ------------
+sphinx==7.2.6                    # Documentation generator
+sphinx-rtd-theme==2.0.0          # ReadTheDocs theme for Sphinx
+
+# Utilities
+# --------
+python-dateutil==2.8.2           # Date/time utilities
+aiofiles==23.2.1                 # Async file operations
+jinja2==3.1.3                    # Template engine (used by Quart)
+markupsafe==2.1.3                # Safe string markup for Jinja2
+
+# Data Processing (if needed)
+# --------------------------
+# pandas==2.1.4                    # Data analysis library (optional)
+# numpy==1.26.3                    # Numerical computing (optional)
