1. ssl_validator.py - Comprehensive SSL validation script with:     - Certificate file validation     - SSL connection testing     - SSL enforcement verification     - Enhanced security settings   2. settings.py - Updated SSL configuration:     - Enhanced _create_ssl_context() function with strict security     - Updated get_db_config() to support production database variables     - Environment-based SSL verification modes   3. .env and .env.development - Updated environment files:     - New PROD_DB_* variables for production database     - SSL certificate path configuration     - SSL validation toggle   4. test_ssl.py - Simple test runner for SSL validation

--- a/.env.development
+++ b/.env.development
@@ -35,7 +35,8 @@ USER_DB_PORT=3306
 # TMDB_API_KEY=<SET_IN_ENVIRONMENT>
 
 # SSL Certificate (Optional for Local Testing)
-SSL_CERT_PATH=
+SSL_CERT_PATH=isrgroot.pem
+VALIDATE_SSL=false
 
 # Project Root
 PROJECT_ROOT=/Users/bryceharmon/Desktop/nextreel-lite
