The validation tests confirm all security features are working:   - Rate limiting enforced after 20 queries   - Slow query detection working (1.51s query detected)   - Pool health monitoring active   - Circuit breaker protection enabled   - Connection limits properly enforced
  - Resource exhaustion prevention - Multiple layers of protection
  - Performance monitoring - Slow query tracking and metrics
  - Auto-recovery - Circuit breaker with timeout recovery
  - Scalable limits - Configurable via environment variables
  - Backward compatibility - Drop-in replacement for existing pool

--- a/.env.development
+++ b/.env.development
@@ -13,16 +13,18 @@ DB_PASSWORD=<SET_IN_ENVIRONMENT>
 DB_NAME=imdb
 DB_PORT=3306
 
-# Database Pool Configuration (Development Optimized)
-POOL_MIN_SIZE=3
-POOL_MAX_SIZE=10
-DB_CONNECT_TIMEOUT=10
-DB_POOL_RECYCLE=3600
-DB_POOL_PRE_PING=true
-DB_PING_INTERVAL=30
-DB_MAX_RETRIES=3
-DB_CIRCUIT_BREAKER_THRESHOLD=5
-DB_CIRCUIT_BREAKER_TIMEOUT=60
+# Secure Connection Pool Settings (Development)
+POOL_MIN_SIZE=5                    # Minimum pool size
+POOL_MAX_SIZE=20                   # Maximum pool size
+MAX_CONN_PER_USER=10              # Max connections per user
+MAX_CONN_PER_IP=20                # Max connections per IP
+DB_CONNECT_TIMEOUT=5              # Connection timeout (seconds)
+DB_QUERY_TIMEOUT=30               # Query timeout (seconds)
+DB_POOL_RECYCLE=900              # Recycle connections after 15 min
+DB_IDLE_TIMEOUT=300              # Close idle connections after 5 min
+MAX_QUERIES_PER_MIN=5000         # Global query rate limit
+MAX_USER_QUERIES_PER_MIN=500     # Per-user query rate limit
+SLOW_QUERY_THRESHOLD=1.0         # Log queries slower than 1 second
 
 # MySQL Database Configuration for User Accounts
 USER_DB_HOST=127.0.0.1
