Configure secure production environment
- Generated cryptographically secure secrets:
  - 64-character Flask secret key
  - 32-character session secret
- Enabled production mode (FLASK_ENV=production)
- Enabled SSL validation (VALIDATE_SSL=true)
- Configured TMDB API key
- Set local MySQL passwords
- Validated cache security: encryption and HMAC working
- Updated .gitignore to exclude sensitive files

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,7 @@ logs/*.log
 
 # Integration documentation (internal use only)
 SECURITY_INTEGRATION.md
+
+# Production environment files (added by setup script)
+.env.production.backup*
+.production_secrets.json
